// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dualClass reducer default 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Object {
    "aToken": "0x0",
    "bToken": "0x0",
    "feeCollector": "0x0",
    "operator": "0x0",
    "oracle": "0x0",
    "roleManager": "0x0",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Array [],
  "states": Object {
    "alpha": 0,
    "beta": 0,
    "collateral": 0,
    "createCommRate": 0,
    "feeBalance": 0,
    "iterationGasThreshold": 0,
    "lastOperationTime": 0,
    "lastPrice": 0,
    "lastPriceTime": 0,
    "limitLower": 0,
    "limitPeriodic": 0,
    "limitUpper": 0,
    "maturity": 0,
    "minBalance": 0,
    "navA": 0,
    "navB": 0,
    "nextResetAddrIndex": 0,
    "operationCoolDown": 0,
    "period": 0,
    "periodCoupon": 0,
    "preResetWaitingBlocks": 0,
    "priceFetchCoolDown": 0,
    "redeemCommRate": 0,
    "resetPrice": 0,
    "resetPriceTime": 0,
    "resetState": "",
    "state": "Loading",
    "totalSupplyA": 0,
    "totalSupplyB": 0,
    "totalUsers": 0,
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassAcceptedPrices 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Object {
    "test": "test",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Object {
    "test": "test",
  },
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassAddresses 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Object {
    "test": "test",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Array [],
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassBalances 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Object {
    "test": "test",
  },
  "balances": Array [
    "test",
  ],
  "conversions": Array [
    "test",
  ],
  "exchangePrices": Object {
    "test": "test",
  },
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassConversions 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Object {
    "test": "test",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [
    "test",
  ],
  "exchangePrices": Object {
    "test": "test",
  },
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassExchangePrices 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Object {
    "test": "test",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Object {
    "test": "test",
  },
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassStates 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Object {
    "aToken": "0x0",
    "bToken": "0x0",
    "feeCollector": "0x0",
    "operator": "0x0",
    "oracle": "0x0",
    "roleManager": "0x0",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Array [],
  "states": Object {
    "test": "test",
  },
  "subscription": 0,
  "tenor": "Perpetual",
  "type": "Beethoven",
}
`;

exports[`dualClass reducer dualClassSubscription off 1`] = `
Object {
  "acceptedPrices": Array [],
  "addresses": Object {
    "aToken": "0x0",
    "bToken": "0x0",
    "feeCollector": "0x0",
    "operator": "0x0",
    "oracle": "0x0",
    "roleManager": "0x0",
  },
  "balances": Object {
    "a": 0,
    "b": 0,
    "duo": 0,
  },
  "conversions": Array [],
  "exchangePrices": Array [],
  "states": Object {
    "alpha": 0,
    "beta": 0,
    "collateral": 0,
    "createCommRate": 0,
    "feeBalance": 0,
    "iterationGasThreshold": 0,
    "lastOperationTime": 0,
    "lastPrice": 0,
    "lastPriceTime": 0,
    "limitLower": 0,
    "limitPeriodic": 0,
    "limitUpper": 0,
    "maturity": 0,
    "minBalance": 0,
    "navA": 0,
    "navB": 0,
    "nextResetAddrIndex": 0,
    "operationCoolDown": 0,
    "period": 0,
    "periodCoupon": 0,
    "preResetWaitingBlocks": 0,
    "priceFetchCoolDown": 0,
    "redeemCommRate": 0,
    "resetPrice": 0,
    "resetPriceTime": 0,
    "resetState": "",
    "state": "Loading",
    "totalSupplyA": 0,
    "totalSupplyB": 0,
    "totalUsers": 0,
  },
  "subscription": 0,
  "tenor": "off tenor",
  "type": "off type",
}
`;

exports[`dualClass reducer dualClassSubscription off 2`] = `
Array [
  Array [
    123,
  ],
]
`;

exports[`dualClass reducer dualClassSubscription on 1`] = `
Object {
  "acceptedPrices": Array [
    "test",
  ],
  "addresses": Object {
    "test": "test",
  },
  "balances": Array [
    "test",
  ],
  "conversions": Array [
    "test",
  ],
  "exchangePrices": Object {
    "test": "test",
  },
  "states": Object {
    "test": "test",
  },
  "subscription": 123,
  "tenor": "on tenor",
  "type": "on type",
}
`;
